# clang-tidy-standalone

./: CMakeLists.txt  ClangTidyForceLinker.h  README.md  build.sh  configure.sh
tool/: ClangTidyMain.cpp
